# future-healthcare-cli

./: CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  cli.py  pyproject.toml
.agents/skills/future-healthcare-cli/: SKILL.md
.github/: change_version.py
.github/workflows/: publish-dev.yml  publish-main.yml  publish.yml  test.yml
futurehealth/: __init__.py  __main__.py  utils.py
futurehealth/client/: __init__.py  exceptions.py  models.py
futurehealth/commands/: __init__.py  _mixins.py  beneficiaries.py  buildings.py  check.py  cli.py  config.example.toml  config.py  consult.py  fetch_error_details.py  login.py  nifs.py  services.py  submit.py
futurehealth/utils/: __init__.py  models.py  pdf.py  pdf_vision.py  prompts.py
tests/: test_beneficiaries.py  test_check.py  test_client.py  test_demo.py  test_fetch_error_details.py  test_main.py  test_nifs.py  test_services.py  test_submit.py  test_utils.py
tests/fixtures/: future-health-errors-473.i18n.json  future-health-errors-473.json
