[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "future-healthcare-cli"
dynamic = ["version"]
description = "CLI for Future Healthcare workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "fopina" },
]
dependencies = [
    "classyclick",
    "openai",
    "pillow",
    "platformdirs",
    "pydantic",
    "pymupdf",
    "requests",
]

[project.scripts]
futurehealth = "futurehealth.__main__:cli"

[dependency-groups]
dev = [
    "build",
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "ruff",
    "twine",
]

[tool.setuptools.dynamic]
version = { attr = "futurehealth.__version__" }

[tool.setuptools.packages.find]
include = ["futurehealth*"]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --disable-socket"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["futurehealth"]

[tool.coverage.report]
show_missing = true
skip_covered = true
