[build-system]
requires = ["setuptools>=69.5.0,<80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "future-healthcare"
authors = [{name="Filipe Pina", email="shelf-corncob-said@duck.com" }]
dynamic = ["version"]
description = "Python library and optional CLI for Future Healthcare"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pydantic>=2",
    "requests>=2",
]

[project.optional-dependencies]
cli = [
    "classyclick>=1.0.0",
    "platformdirs>=4",
]
vision = [
    "pillow>=10",
    "openai>=1",
    "pymupdf>=1.24",
]

[project.scripts]
future-healthcare = "futurehealth.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://github.com/fopina/future-healthcare-cli"

[tool.setuptools.packages.find]
include = ["futurehealth*"]

[tool.setuptools.dynamic]
version = {attr = "futurehealth.__version__"}

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --disable-socket"
filterwarnings = [
    "ignore:(?i).*swig.*__module__.*:DeprecationWarning",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["futurehealth"]

[tool.coverage.report]
show_missing = true
skip_covered = true
